Time: 0 ms (100%), Space: 41.1 MB (61.34%) - LeetHub